force-app/main/default/objects/TeamProgress__c/TeamProgress__c.object-meta.xml
<CustomObject>
    <label>TeamProgress</label>
    <nameField>
        <label>TeamProgress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TeamProgresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>