force-app/main/default/objects/TeamProgress__c/fields/EndDateAllocated__c.field-meta.xml
<CustomField>
    <fullName>EndDateAllocated__c</fullName>
    <label>EndDateAllocated</label>
    <type>Date</type>
</CustomField>