force-app/main/default/objects/TeamProgress__c/fields/ProjectLineItem__c.field-meta.xml
<CustomField>
    <fullName>ProjectLineItem__c</fullName>
    <label>ProjectLineItem</label>
    <referenceTo>ProjectLineItem__c</referenceTo>
    <relationshipLabel>TeamProgresses</relationshipLabel>
    <relationshipName>TeamProgresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>