force-app/main/default/objects/TeamProgress__c/fields/QuantityHours__c.field-meta.xml
<CustomField>
    <fullName>QuantityHours__c</fullName>
    <label>QuantityHours</label>
    <summarizedField>Task__c.RecordHours__c</summarizedField>
    <summaryForeignKey>Task__c.AssignedResource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>