force-app/main/default/objects/TeamProgress__c/fields/QuantityHoursAllocated__c.field-meta.xml
<CustomField>
    <fullName>QuantityHoursAllocated__c</fullName>
    <formula>((5 * ( FLOOR( ( EndDateAllocated__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( EndDateAllocated__c - DATE( 1900, 1, 8), 7 ) ) ) - (5 * ( FLOOR( ( StartDateAllocated__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( StartDateAllocated__c - DATE( 1900, 1, 8), 7 ) ) ))*8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuantityHoursAllocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>