force-app/main/default/objects/TeamProgress__c/fields/Squadlead__c.field-meta.xml
<CustomField>
    <fullName>Squadlead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Squadlead</label>
    <type>Checkbox</type>
</CustomField>