force-app/main/default/objects/TeamProgress__c/fields/StartDateAllocated__c.field-meta.xml
<CustomField>
    <fullName>StartDateAllocated__c</fullName>
    <label>StartDateAllocated</label>
    <type>Date</type>
</CustomField>