force-app/main/default/objects/TeamProgress__c/fields/totalWorkDaysAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalWorkDaysAmount__c</fullName>
    <formula>QuantityHoursAllocated__c *  RatePerHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalWorkDaysAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>