force-app/main/default/objects/TeamProgress__c/validationRules/CanNotModifyStatusInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotModifyStatusInProgress</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( ProjectLineItem__r.ProjectAssigned__r.Status__c ,&apos;In Progress&apos;)</errorConditionFormula>
    <errorMessage>You can not modify any field beause the project is in progress stage</errorMessage>
</ValidationRule>