force-app/main/default/objects/TeamProgress__c/validationRules/ThereIsAlreadySquadLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ThereIsAlreadySquadLead</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISBLANK( ProjectLineItem__r.ProjectAssigned__r.SquadLead__c ) ) &amp;&amp;  NOT( ProjectLineItem__r.ProjectAssigned__r.SquadLead__c  =  Resource__r.FullName__c ) &amp;&amp;  Squadlead__c</errorConditionFormula>
    <errorDisplayField>Squadlead__c</errorDisplayField>
    <errorMessage>There is already Squad Lead assigned</errorMessage>
</ValidationRule>